farhana and my marge code done

--- a/add_new_project.html
+++ b/add_new_project.html
@@ -66,7 +66,12 @@
             </li>
 
             <li>
-                <a href="#" style="text-decoration: none;"> Requisition Management </a>
+                <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition
+                    Management</a>
+                <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                     <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                    <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
+                </ul>
             </li>
         </ul>
     </nav>
@@ -125,13 +130,13 @@
         </nav>
 
 
-<!--        Add Project Form Start-->
+        <!--        Add Project Form Start-->
         <div class="container py-3 ">
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="text-center mb-3" style="margin-bottom: 20px">Add New Project</h2>
 
-<!--                    <hr class="mb-4">-->
+                    <!--                    <hr class="mb-4">-->
                     <div class="row justify-content-center ">
                         <div class="col-md-8 ">
                             <span class="anchor" id="formLogin"></span>
@@ -239,7 +244,9 @@
                                             <input type="radio" id="female4" name="requisition1" value="female4">
                                             <label for="female4">Postponed</label><br>
                                         </div>
-                                        <button class="btn btn-lg float-right" type="button" style="background: #358597; color: #fafafa">Submit</button>
+                                        <button class="btn btn-lg float-right" type="button"
+                                                style="background: #358597; color: #fafafa">Submit
+                                        </button>
                                     </form>
                                 </div><!--/card-block-->
                             </div><!-- /form card login -->
@@ -249,7 +256,7 @@
                 </div><!--/col-->
             </div><!--/row-->
         </div>
-<!--        Add Project Form End-->
+        <!--        Add Project Form End-->
 
 
         <!-- Scroll to Top -->
