--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                     </ul>
                 </li>
 
-
-
-                <li>
-                    <a href="#" style="text-decoration: none;"> Requisition Management </a>
+                 <li>
+                    <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                       <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
+                    </ul>
                 </li>
 
             </ul>
