--- a/department_management.html
+++ b/department_management.html
@@ -86,7 +86,11 @@
                 </li>
 
                 <li>
-                    <a href="#" style="text-decoration: none;"> Requisition Management </a>
+                    <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                       <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
